0.57.0.0/_sources/Reference/NodeReference/GafferAppleseed/AppleseedLight.md.txt
AppleseedLight
==============

Loads appleseed lights.

user
----

Container for user-defined plugs. Nodes
should never make their own plugs here,
so users are free to do as they wish.

out
---

The output scene.

enabled
-------

The on/off state of the node. When it is off, the node outputs
an empty scene.

name
----

The name of the object in the output scene.

sets
----

A list of sets to include the object in. The
names should be separated by spaces.

transform
---------

The transform applied to the object.

parameters
----------

The parameters of the light shader - these will vary based on the light type.

defaultLight
------------

Whether this light illuminates all geometry by default. When
toggled, the light will be added to the "defaultLights" set, which
can be referenced in set expressions and manipulated by downstream
nodes.

visualiserAttributes
--------------------

Attributes that affect the visualisation of this Light in the Viewer.

visualiserAttributes.scale
--------------------------

Scales non-geometric visualisations in the viewport to make them
easier to work with.

visualiserAttributes.maxTextureResolution
-----------------------------------------

Visualisers that load textures will respect this setting to
limit their resolution.

visualiserAttributes.frustum
----------------------------

Controls whether applicable lights draw a representation of their
light projection in the viewer.

visualiserAttributes.lightFrustumScale
--------------------------------------

Allows light projections to be scaled to better suit the scene.

visualiserAttributes.lightDrawingMode
-------------------------------------

Controls how lights are presented in the Viewer.